Avoid line overlapping content

--- a/assets/css/components/line.css
+++ b/assets/css/components/line.css
@@ -5,7 +5,7 @@
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
-	bottom: var(--spacing-xxl);
+	bottom: 4rem;
 	z-index: var(--z-index-line);
 }
 
